# zxc

./: CMakeLists.txt  README.md  WHITEPAPER.md
.clusterfuzzlite/: build.sh
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  RELEASE_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/workflows/: README.md  benchmark.yml  build.yml  build_all.yml  codeql.yml  deps.yml  fuzzing.yml  quality.yml  security.yml  update-rapidhash.yml
include/: zxc_constants.h  zxc_sans_io.h
src/cli/: main.c
src/lib/: zxc_common.c  zxc_compress.c  zxc_decompress.c  zxc_driver.c  zxc_internal.h
tests/: fuzz_decompress.c  fuzz_roundtrip.c  test.c  test_cli.sh
